# rust-grid-trader

./: Cargo.toml  working.rs
config/: system_config.json
src/: data.rs  main.rs
src/algorithm/: data.rs  grid.rs  mod.rs  position.rs  vwap.rs
src/algorithm/indicators/: RSI.rs  mod.rs  rsi.rs  sma.rs  vwap.rs
src/algorithms/: mod.rs  sma.rs  sma_gemini.rs
